Ecomm/aws-iac/Kube-manifest-files/monitoring/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
      - path: /alertmanager
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-alertmanager
            port:
              number: 9093
      # - path: /kibana
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: kibana
      #       port:
      #         number: 5601
      # - path: /elasticsearch
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: my-elasticsearch
      #       port:
      #         number: 9200
